feat(sec): complete SEC-01 to SEC-06 implementation and verification
This commit includes:\n- SEC-01: Zero Trust Gateway (Nginx OIDC)\n- SEC-02: Centralized Identity (Keycloak)\n- SEC-03: MFA Enforcement\n- SEC-04: RBAC Policy\n- SEC-05: Vault Setup\n- SEC-06: Auto-Unseal Script\n- Comprehensive Test Suite (tests/security/)\n- Updated Security Documentation

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@ Thumbs.db
 # ── 도커 ───────────────────────────────────────────────────────────────
 docker/mock_usb/
 mock_usb/
+
+# Apps (Plugins)
+apps/
+vault_keys.json
+usb/
