--- a/config/nginx.yml
+++ b/config/nginx.yml
@@ -1,20 +1,36 @@
-enable: true
+####################################
+# 파일명: config/nginx.yml
+# 목적: Nginx (OpenResty + WAF) 설정
+#
+# [시스템 강제 설정 (참조용)]
+# 아래 설정들은 시스템 정책에 의해 강제 적용됩니다.
+#
+# 1. Image Strategy
+#    - image: ai4infra/nginx:custom (Built locally)
+#
+# 2. Path Defaults (Hardcoded)
+#    - config: /opt/ai4infra/nginx/config
+#    - certs : /opt/ai4infra/nginx/certs
+#    - logs  : /opt/ai4infra/nginx/logs
+#####################################
 
-image:
-  name: "nginx"
-  tag: "1.24-alpine"
-
-path:
-  config: "/opt/ai4infra/nginx/config"
-  certs: "/opt/ai4infra/nginx/certs"
-  logs: "/opt/ai4infra/nginx/logs"
+service:
+  enable: ${NGINX_ENABLED}
 
 # Nginx는 80/443 포트를 고정으로 사용하는 것이 일반적이지만,
 # 충돌 시 변경할 수 있도록 변수화합니다.
 env_vars:
   HTTP_PORT: "80"
   HTTPS_PORT: "443"
+  NGINX_WORKER_PROCESSES: "auto"
+  NGINX_WORKER_CONNECTIONS: "1024"
   SERVER_NAME: "ai4infra.internal" # 내부 도메인 기본값
+  
+  # [Security] OIDC Configuration
+  OIDC_PROVIDER: "keycloak" # google or keycloak (Privacy First)
+  OIDC_CLIENT_ID: "${OIDC_CLIENT_ID:-ai4infra-client}" # Keycloak Default
+  OIDC_CLIENT_SECRET: "${OIDC_CLIENT_SECRET:-change_me_in_production}"
+  OIDC_COOKIE_SECRET: "${OIDC_COOKIE_SECRET:-changeme_1234567890123456}"
 
 # 교육용 설정 (사용자가 직접 수정 가능)
 compose_vars:
