--- a/config/postgres.yml
+++ b/config/postgres.yml
@@ -13,7 +13,7 @@
 #####################################
 
 service:
-  enable: true
+  enable: ${POSTGRES_ENABLED}
 
 backup:
   schedule: "0 3 * * *" # Daily 03:00 (Hot Backup)
