--- a/templates/nginx/config/nginx.conf
+++ b/templates/nginx/config/nginx.conf
@@ -1,15 +1,40 @@
-user  nginx;
+user root; # OpenResty needs root to read 600 permissions
+env OPENID_CLIENT_SECRET;
+env OIDC_PROVIDER;
+env OIDC_CLIENT_ID;
+env OIDC_CLIENT_SECRET;
+env OIDC_COOKIE_SECRET;
+
+# [Security] Load ModSecurity Module
+load_module /usr/local/openresty/nginx/modules/ngx_http_modsecurity_module.so;
+
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+# [Security] PID file in /tmp (tmpfs) for Read-Only FS
+pid        /tmp/nginx.pid;
 
 events {
     worker_connections  1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
+    lua_package_path "/etc/nginx/conf.d/?.lua;;";
+    resolver 127.0.0.11 ipv6=off; # Docker DNS for Lua resolution
+
+    include       proxy.conf;
+
+    # [Security] Temp paths redirected to tmpfs (Read-Only fix)
+    client_body_temp_path /tmp/client_temp;
+    proxy_temp_path       /tmp/proxy_temp;
+    fastcgi_temp_path     /tmp/fastcgi_temp;
+    uwsgi_temp_path       /tmp/uwsgi_temp;
+    scgi_temp_path        /tmp/scgi_temp;
+
+    # Hide nginx version information.
+    server_tokens off;
+
+    include       mime.types;
     default_type  application/octet-stream;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -27,9 +52,22 @@ http {
     gzip  on;
 
     # Security Headers (기본)
-    # 버전 정보 숨김
-    server_tokens off;
+    # 버전 정보 숨김 (Duplicate removed)
+
+    # [Security] OIDC Authentication Enforcement (Global)
+    access_by_lua_block {
+        -- Static Asset Bypass (CSS, JS, Images)
+        if ngx.var.uri:match("%.css$") or ngx.var.uri:match("%.js$") or ngx.var.uri:match("%.png$") or ngx.var.uri:match("%.ico$") then
+            return
+        end
+        -- OIDC Validate
+        require("oidc_auth").validate()
+    }
 
     # Conf.d 설정 로드 (개별 사이트/서비스 설정)
     include /etc/nginx/conf.d/*.conf;
+
+    # [Security] WAF (ModSecurity) Enable
+    modsecurity on;
+    modsecurity_rules_file /etc/nginx/modsecurity/main.conf;
 }
