--- a/config/elk.yml
+++ b/config/elk.yml
@@ -1,5 +1,5 @@
 service:
-  enable: true
+  enable: ${ELK_ENABLED}
 
 # Convention: Data path is hardcoded in docker-compose.yml (/opt/ai4infra/elk/data)
 
@@ -27,5 +27,9 @@ compose_vars:
   # Ports
   ES_PORT: "9200"
   KIBANA_PORT: "5601"
+  ELASTIC_VERSION: "8.11.1"
+  CLUSTER_NAME: "ai4infra-cluster"
+  ELASTIC_SECURITY_ENABLED: "false"
+  KIBANA_PASSWORD: "changeme"
   LOGSTASH_PORT: "5044"
   LOG_PATH: "/var/log/ai4infra"
