--- a/config/vault.yml
+++ b/config/vault.yml
@@ -32,17 +32,18 @@
 #####################################
 
 service:
-  enable: true
+  enable: ${VAULT_ENABLED}
 
 backup:
   schedule: "0 4 * * *" # Daily 04:00 (Hot Backup)
-  retention_days: 30    # Keep backups for 30 days
+  retention_days: 30    # VAULT
 
 env_vars:
-  VAULT_ADDR: "https://0.0.0.0:8200"
+  VAULT_ADDR: "http://127.0.0.1:8200"
   VAULT_API_ADDR: "https://vault:8200"
 
 compose_vars:
   PORT: 8200
   VAULT_MEM_LIMIT: "640m"
-  
+  VAULT_PORT: 8200
+  VAULT_API_ADDR: "http://127.0.0.1:8200"
