--- a/templates/elk/config/logstash/pipeline/logstash.conf
+++ b/templates/elk/config/logstash/pipeline/logstash.conf
@@ -21,5 +21,6 @@ output {
     index => "ai4infra-%{+YYYY.MM.dd}"
   }
   # 디버깅용: 컨테이너 로그로 출력 (운영 시 주석 처리 가능)
-  stdout { codec => rubydebug }
+  # 디버깅용: 컨테이너 로그로 출력 (운영 시 주석 처리 권장)
+  # stdout { codec => rubydebug }
 }
