--- a/templates/nginx/config/conf.d/orthanc-mock.conf
+++ b/templates/nginx/config/conf.d/orthanc-mock.conf
@@ -1,6 +1,9 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name pacs-mock.ai4infra.internal;
+
+    ssl_certificate /etc/nginx/certs/orthanc-mock.crt;
+    ssl_certificate_key /etc/nginx/certs/orthanc-mock.key;
 
     # DICOM Upload often involves large files
     client_max_body_size 0;
@@ -8,7 +11,18 @@ server {
     access_log /var/log/nginx/orthanc_access.log main;
     error_log /var/log/nginx/orthanc_error.log warn;
 
+    # Bypass OIDC for static assets to prevent redirect loops/locking
+    location ~* \.(css|js|png|gif|ico|jpg|jpeg|woff|woff2|ttf|svg)$ {
+        proxy_pass http://ai4infra-orthanc-mock:8042;
+        proxy_set_header Host $http_host;
+    }
+
     location / {
+        access_by_lua_block {
+            local oidc = require("oidc_auth")
+            oidc.validate()
+        }
+
         proxy_pass http://ai4infra-orthanc-mock:8042;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -20,4 +34,11 @@ server {
         proxy_send_timeout 600s;
         proxy_request_buffering off; # Important for streaming uploads
     }
+}
+
+# Redirect HTTP to HTTPS
+server {
+    listen 80;
+    server_name pacs-mock.ai4infra.internal;
+    return 301 https://$host$request_uri;
 }
