--- a/templates/nginx/config/conf.d/orthanc-pseudo.conf
+++ b/templates/nginx/config/conf.d/orthanc-pseudo.conf
@@ -1,6 +1,9 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name pacs-pseudo.ai4infra.internal;
+
+    ssl_certificate /etc/nginx/certs/orthanc-pseudo.crt;
+    ssl_certificate_key /etc/nginx/certs/orthanc-pseudo.key;
 
     # DICOM Upload often involves large files
     client_max_body_size 0;
@@ -20,4 +23,11 @@ server {
         proxy_send_timeout 600s;
         proxy_request_buffering off; # Important for streaming uploads
     }
+}
+
+# Redirect HTTP to HTTPS
+server {
+    listen 80;
+    server_name pacs-pseudo.ai4infra.internal;
+    return 301 https://$host$request_uri;
 }
