--- a/templates/postgres/docker-compose.yml
+++ b/templates/postgres/docker-compose.yml
@@ -8,6 +8,13 @@ services:
 
     ports:
       - "${PORT:-5432}:5432"
+
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
     networks:
       - ai4infra
 
@@ -20,7 +27,7 @@ services:
       - ${DATA_DIR:-/opt/ai4infra/postgres/data}:/var/lib/postgresql/data
 
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 2s
       timeout: 2s
       retries: 10
@@ -29,5 +36,3 @@ networks:
   ai4infra:
     external: true
     name: ai4infra
-
-
